<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLoginActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/act_forgot_password_icon_size"
        android:layout_height="@dimen/act_forgot_password_icon_size"
        android:layout_margin="@dimen/spacing_large"
        android:contentDescription="@string/act_forgot_password_cd_icon"
        app:srcCompat="@drawable/ic_padlock" />

    <TextView
        style="@style/passwordTitle"
        android:text="@string/act_forgot_password_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:gravity="center"
        android:text="@string/act_forgot_password_message"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_large" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/act_forgot_password_til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputLayoutWhite"
        app:theme="@style/TextInputLayoutWhite">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/act_forgot_password_et_username"
            style="@style/EditTextWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/act_forgot_password_hint_username"
            android:imeOptions="actionDone"
            android:inputType="textVisiblePassword"
            android:lines="1" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/act_forgot_password_btn_forgot_password"
        style="@style/buttonRounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/act_forgot_password_button_continue"
        android:textSize="@dimen/text_normal" />

</LinearLayout>
