<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/spacing_normal"
        android:paddingLeft="@dimen/spacing_large"
        android:paddingRight="@dimen/spacing_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.60"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/act_login_til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutWhite"
                app:theme="@style/TextInputLayoutWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/act_login_et_login"
                    style="@style/EditTextWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/act_login_hint_user"
                    android:imeOptions="actionNext"
                    android:inputType="textVisiblePassword|textCapCharacters"
                    android:lines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/act_login_til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutWhite"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white"
                app:theme="@style/TextInputLayoutWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/act_login_et_password"
                    style="@style/EditTextWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/act_login_hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/act_login_btn_login"
                style="@style/buttonRounded"
                android:text="@string/act_login_label_get_in" />

            <TextView
                android:id="@+id/act_login_tv_forgot_password"
                style="@style/textForgotPassword"
                android:text="@string/act_login_label_forgot_password" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_botoes_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/act_login_line_width"
                    android:layout_height="@dimen/act_login_line_height"
                    android:background="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:paddingBottom="@dimen/spacing_tiny"
                    android:text="@string/act_login_entrar_com"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_medium" />

                <View
                    android:layout_width="@dimen/act_login_line_width"
                    android:layout_height="@dimen/act_login_line_height"
                    android:background="@android:color/white" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/act_login_btn_google"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/minimum_touch_size"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_marginEnd="@dimen/spacing_small"
                    android:layout_marginRight="@dimen/spacing_small"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_login_google"
                        style="@style/buttonRounded"
                        android:text="@string/act_login_google" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/act_login_btn_facebook"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/minimum_touch_size"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_marginLeft="@dimen/spacing_small"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_login_facebook"
                        style="@style/buttonRounded"
                        android:text="@string/act_login_facebook" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>


